<resources>
    <string name="app_name">agentpos</string>
    <string name="welcome_use">欢迎使用</string>
    <string name="welcome_use_app">中 付 支 付 代 理 APP</string>
    <string name="login_welcome_text">欢 迎 使 用 中 付 掌 柜</string>
    <string name="login_btn">登录</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_no_account">用户名不能为空</string>
    <string name="login_min_eleven">用户名小于11位</string>
    <string name="login_open_location">无法定位，请打开定位服务</string>
    <string name="main_app">中付掌柜</string>
    <string name="main_home">主页</string>
    <string name="main_me">我的</string>
    <string name="part_permission_fail">部分权限请求失败，可能会影响程序使用。请到设置界面赋予权限。</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="home_add_merchant">新增商户</string>
    <string name="home_merchant_query">商户查询</string>
    <string name="home_benefit_query">分润查询</string>
    <string name="home_trade_query">交易查询</string>
    <string name="home_trade_system">交易统计</string>
    <string name="home_benefit_system">分润统计</string>
    <string name="home_backlog_schedule">待办事项</string>
    <string name="home_yesterday_money">昨日交易额(元)</string>
    <string name="home_today_money">当日交易额(元)</string>
    <string name="home_benefit_total">分润统计</string>
    <string name="home_yesterday_benefit">昨日分润金额(元)</string>
    <string name="home_mouth_benefit">本月分润金额(元)</string>
    <string name="home_trade_single">交易暂缓</string>
    <string name="home_paragraph_single">提现调单</string>
    <string name="home_trade_singles">交易暂缓  (%1$s)</string>
    <string name="home_paragraph_singles">提现调单  (%1$s)</string>
    <string name="mine_merchant">我的商户(个)</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_password">修改密码</string>
    <string name="mine_hotel">联系客服</string>
    <string name="mine_my_benefit">我的分润(元)</string>
    <string name="mine_old_pwd">原密码</string>
    <string name="mine_import_oldPwd">请输入您的原密码</string>
    <string name="mine_true_modify">确认修改</string>
    <string name="mine_modify_success">密码修改成功</string>
    <string name="mine_commit_feedback">提交反馈</string>
    <string name="mine_hint_feedback">亲，有什么不满意的说两句吧，我们会尽快反馈给技术同学，给予解决的。</string>
    <string name="mine_feedback_success">意见反馈成功</string>
    <string name="personal_welcome_before_moring">早上好</string>
    <string name="personal_welcome_moring">上午好</string>
    <string name="personal_welcome_noon">中午好</string>
    <string name="personal_welcome_afternoon">下午好</string>
    <string name="personal_welcome_evening">晚上好</string>
    <string name="add_mer">新增商户</string>
    <string name="add_choose_settle_type">请选择结算类型</string>
    <string name="add_choose_mer">请选择商户类型</string>
    <string name="add_mer_grade">商户评级</string>
    <string name="add_choose_grade">请选择商户评级</string>
    <string name="add_mer_type">商户类型</string>
    <string name="add_project_type">项目类型</string>
    <string name="add_choose_type">请选择项目类型</string>
    <string name="add_mer_name">商户名称</string>
    <string name="add_write_name">请填写商户名称</string>
    <string name="add_in_location">所在地区</string>
    <string name="add_choose_location">请选择地区</string>
    <string name="add_detailed_address">详细地址</string>
    <string name="add_write_address">请填写详细地址</string>
    <string name="add_contact_way">联系电话</string>
    <string name="add_write_contact_way">请填写联系电话</string>
    <string name="add_contact_man">联系人</string>
    <string name="add_write_contact_man">请填写联系人</string>
    <string name="add_id_card">身份证</string>
    <string name="add_write_id">请填写身份证号码</string>
    <string name="add_id_validity">身份证有效期</string>
    <string name="add_write_id_validity">请填写身份证有效期</string>
    <string name="add_write_true_id_validity">请填写正确的身份证有效期</string>
    <string name="add_id_dialog">年月日 例：20180330\n若是长期请填写：99991231</string>
    <string name="add_business_no">营业执照号</string>
    <string name="add_write_business_no">请填写社会统一信用代码</string>
    <string name="add_write_true_business_no">请填写15或18位信用代码</string>
    <string name="add_legal_representative">法定代表人</string>
    <string name="add_write_legal_representative">请填写法定代表人</string>
    <string name="add_settle_name">结算人名</string>
    <string name="add_write_settle_name">请填写结算人姓名</string>
    <string name="add_settle_type">结算类型</string>
    <string name="add_settle_private_card">对私银行卡</string>
    <string name="add_public">对公</string>
    <string name="add_private">对私存折</string>
    <string name="add_settle_account">结算账号</string>
    <string name="add_write_settle_account">请填写结算账号</string>
    <string name="add_city">开户城市</string>
    <string name="add_choose_city">请选择开户城市</string>
    <string name="add_bank">开户银行</string>
    <string name="add_choose_bank">请选择开户银行</string>
    <string name="add_banks">开户支行</string>
    <string name="add_choose_banks">请选择开户支行</string>
    <string name="add_debit_rate">借记卡费率</string>
    <string name="add_debit_capping">借记卡封顶</string>
    <string name="add_yuan">元</string>
    <string name="add_credit_rate">贷记卡费率</string>
    <string name="add_settle_rate">结算费用</string>
    <string name="add_zero_yuan">0元</string>
    <string name="add_three_yuan">3元</string>
    <string name="add_settle_cycle">结算周期</string>
    <string name="add_t">T+1</string>
    <string name="add_d">D+1</string>
    <string name="add_fixation_amount">固定机数量</string>
    <string name="add_amount">台</string>
    <string name="add_fixation_type">固定机型号</string>
    <string name="add_move_amount">移动机数量</string>
    <string name="add_move_type">移动机型号</string>
    <string name="add_net_98">携机入网返98</string>
    <string name="add_data_update">资料上传</string>
    <string name="add_old_remark">原备注</string>
    <string name="add_remark">备注</string>
    <string name="add_write_remark">请填写备注...</string>
    <string name="add_no_remark">暂无备注</string>
    <string name="add_img_update">图片上传</string>
    <string name="add_net_data">(商户入网图片资料)</string>
    <string name="add_electronic_signature">签名确认</string>
    <string name="add_commit_success">商户提交成功</string>
    <string name="add_continue_net">继续商户入网</string>
    <string name="add_query_record">查看记录</string>
    <string name="add_base_info">基础信息</string>
    <string name="add_select_info">结算信息</string>
    <string name="add_merchant_img">商户照片</string>
    <string name="add_old_img">已传图片</string>
    <string name="add_new_remark">新增备注</string>
    <string name="add_fast_discrete">秒到机（借贷分离）</string>
    <string name="add_fast_indiscrete">秒到机（借贷不分）</string>
    <string name="add_payment_fee">出款费</string>
    <string name="add_select_payment_fee">请选择出款费用</string>
    <string name="add_agree">我已阅读并同意</string>
    <string name="add_agree_agreement">《中付支付商户签约协议》</string>
    <string name="add_zero_withdraw_fee">秒到机(+0元出款费)</string>
    <string name="add_two_withdraw_fee">秒到机(+2元出款费)</string>
    <string name="add_choose_withdraw_fee">请选择出款费</string>
    <string name="add_check_id">检测到您曾使用该身份证进行商户进件操作是否同步当前进件信息?</string>
    <string name="add_debit_big">借记卡费率在0.50-0.60之间</string>
    <string name="add_capping_big">借记卡封顶在20-35之间</string>
    <string name="add_credit_big">贷记卡费率在0.55-0.60之间</string>
    <string name="add_net_tips_one">一、普通商户（一机一码）\n</string>
    <string name="add_net_tips_two">1. 商户入网银联协议，需法人或负责人签名+按手印+盖公章\n
2. 法人手持身份证正面原件照片，对公结算可不提供\n
3. 法人身份证正面、反面原件照片，如提供复印件需加盖公章\n
4. 法人收款结算银行卡原件照片，如提供复印件需加盖公章\n
5. 营业执照原件照片，如提供复印件需加盖公章\n
6. 店铺照片，门面招牌+内景至少各1张\n\n
注：授权结算到非法人帐户，还需提供：\n
1）结算授权书\n
2）法人手持身份证正面+授权书拍照\n
3）被授权收款人手持身份证正面原件照片\n
4）被授权收款人身份证正面、反面原件照片\n
5）被授权收款人结算银行卡原件照片\n</string>
    <string name="add_net_tips_three">二、小微实体商户\n</string>
    <string name="add_net_tips_four">1. 商户入网银联协议，需申请人签名+按手印\n
2. 申请人手持身份证正面原件照片\n
3. 申请人身份证正面、反面原件照片\n
4. 申请人收款结算银行卡原件照片\n
5. 店铺照片，门面招牌+内景至少各1张\n
6. 申请人在其店铺收银台内照片\n</string>
    <string name="add_net_tips_five">三、个人机\n</string>
    <string name="add_net_tips_six">1. 商户入网银联协议，需申请人签名+按手印\n
2. 申请人手持身份证正面原件照片\n
3. 申请人身份证正面、反面原件照片\n
4. 申请人收款结算银行卡原件照片\n</string>
    <string name="add_net_tips_seven">四、K项目实体店\n</string>
    <string name="add_net_tips_eight">1. 商户入网银联协议，需申请人签名+按手印\n
2. 申请人手持身份证正面原件照片\n
3. 申请人身份证正面、反面原件照片\n
4. 申请人收款结算银行卡原件照片\n
5. 店铺照片，门面招牌+内景至少各1张\n
6. 申请人在其店铺收银台内照片（如有营业执照需提供）\n</string>
    <string name="mer_total">商户统计</string>
    <string name="mer_total_count">累计商户数</string>
    <string name="mer_today_add">今日\n新增商户数</string>
    <string name="mer_week_add">本周\n新增商户数</string>
    <string name="mer_month_add">今月\n新增商户数</string>
    <string name="mer_ready_audited">今日\n待审核商户</string>
    <string name="mer_passnot_audited">今日\n审核不通过商户</string>
    <string name="mer_pass_audited">今日\n审核通过商户</string>
    <string name="mer_commit_audited">今日\n提交中商户</string>
    <string name="mer_will_audit">待审核商户</string>
    <string name="mer_proposer">申请人:</string>
    <string name="mer_number">商户号:</string>
    <string name="mer_detail">商户详情</string>
    <string name="mer_not_pass">审核不通过商户</string>
    <string name="mer_audit_pass">审核通过商户</string>
    <string name="mer_commit">提交中商户</string>
    <string name="mer_business_license">是否有营业执照</string>
    <string name="mer_business_number">营业执照号</string>
    <string name="mer_legal_representative">法定代表人</string>
    <string name="mer_img_data">图片资料</string>
    <string name="mer_customer_manager">客户经理</string>
    <string name="mer_merchant_null">商户编码和商户名不能为空</string>
    <string name="share_total_pay">总交易金额:</string>
    <string name="share_total_money">总分润金额:</string>
    <string name="share_today_pay">今日交易金额(元)</string>
    <string name="share_trade_time">交易时间</string>
    <string name="trade_week">本周交易金额(元)</string>
    <string name="trade_this_month">本月交易金额(元)</string>
    <string name="trade_three_month">近三个月交易金额(元)</string>
    <string name="trade_tips">商户类型包括：传统商户、刷卡头、D1商户\n交易类型包括：刷卡交易，微信支付宝，无卡快捷</string>
    <string name="trade_detail">交易明细</string>
    <string name="trade_fast_pay">秒到出款:</string>
    <string name="trade_time">交易时间:</string>
    <string name="trade_money">交易金额:</string>
    <string name="trade_type">交易类型</string>
    <string name="order_manager">调单管理</string>
    <string name="order_not_find">找不到关于“ABCDABCD”商户的消息</string>
    <string name="order_set_time">创建时间:</string>
    <string name="order_manage_detail">交易出款调单详情</string>
    <string name="order_manage_trade">交易出款调单</string>
    <string name="order_manage_trade_success">交易出款调单提交成功</string>
    <string name="order_withdrawal_detail">提现调单详情</string>
    <string name="order_withdrawal_single">提现调单</string>
    <string name="order_withdrawal_single_success">提现调单提交成功</string>
    <string name="order_withdrawal_money">提现金额:</string>
    <string name="order_withdrawal_time">提现时间:</string>
    <string name="order_mer_number">商户号</string>
    <string name="order_time">创建时间</string>
    <string name="order_status">处理标识</string>
    <string name="order_withdrawal_man">调单方</string>
    <string name="order_device_number">设备号</string>
    <string name="order_with_money">提现金额</string>
    <string name="order_withdrawal_charge">提现手续费率</string>
    <string name="order_contract_charge">签约手续费率</string>
    <string name="order_paragraph_charge">出款手续费</string>
    <string name="order_with_time">提现时间</string>
    <string name="order_audit_status">审核状态</string>
    <string name="order_paragraph_status">出款状态</string>
    <string name="order_paragraph_time">出款时间</string>
    <string name="order_tips_time">查单时间</string>
    <string name="order_number_null">调单号不能为空</string>
    <string name="filter_mid_query">输入商户号或商户名进行查询</string>
    <string name="filter_net_time">入网时间</string>
    <string name="filter_turn_to">至</string>
    <string name="filter_reset">重置</string>
    <string name="filter_all">全部</string>
    <string name="bottom_nav_home">首页</string>
    <string name="bottom_nav_gank">gank页</string>
    <string name="bottom_nav_knowledge">知识</string>
    <string name="bottom_nav_project">项目</string>
    <string name="bottom_nav_me">我的</string>
</resources>